--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   
   <body>
   
-   <h1>Pagina principal</h1>
+   <h1>GitHub</h1>
+    
+    <p>Tarea para trabajar con el repositorio remoto GitHub</p>
   
   </body>
 
